# prop-firm-backtest

./: README.md  pyproject.toml
configs/: demo_mes.toml  mes_momentum.toml
docs/: data_format.md
examples/: macro_events.csv  mes_demo.csv
src/topstep_research/: __init__.py  cli.py  config.py  data.py  domain.py  engine.py  indicators.py  metrics.py  monte_carlo.py  reporting.py  runner.py  sample_data.py  simulator.py
src/topstep_research/strategies/: __init__.py  base.py  benchmarks.py  momentum_pullback.py
tests/: test_core.py
